Add login and register form views

--- a/home.html
+++ b/home.html
@@ -1,5 +1,39 @@
 <div ng-controller="HomeCtrl as home">
 
-  <h1>Home</h1>
+  <div class="row">
+
+    <div class="small-12 columns">
+
+      <h1>Home</h1>
+
+      <h2>Register</h2>
+      <form ng-submit="home.register()">
+        <label>
+          Email
+          <input type="email" ng-model="home.email" placeholder="Email" required>
+        </label>
+        <label>
+          Password
+          <input type="password" ng-model="home.password" placeholder="Password" required>
+        </label>
+        <button>Register</button>
+      </form>
+
+      <h2>Login</h2>
+      <form ng-submit="home.login()">
+        <label>
+          Email
+          <input type="email" ng-model="home.email" placeholder="Email" required>
+        </label>
+        <label>
+          Password
+          <input type="password" ng-model="home.password" placeholder="Password" required>
+        </label>
+        <button>Login</button>
+      </form>
+
+    </div>
+
+  </div>
 
 </div>
