--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <link rel="stylesheet" href="bower_components/foundation/css/foundation.css">
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/app.css">
+
+  <base href="/">
 </head>
 <body>
 
