--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>Kent Hack Enough</title>
 
+  <!-- Config -->
+  <script src="config/config.js"></script>
+
   <!-- Vendor -->
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/moment/min/moment.min.js"></script>
@@ -19,6 +22,7 @@
   <script src="scripts/controllers/home.js"></script>
 
   <!-- Services -->
+  <script src="scripts/services/user.js"></script>
 
   <!-- CSS -->
   <link rel="stylesheet" href="bower_components/foundation/css/normalize.css">
