--- a/index.html
+++ b/index.html
@@ -21,8 +21,16 @@
   <script src="scripts/controllers/application.js"></script>
   <script src="scripts/controllers/home.js"></script>
 
+  <!-- Filters -->
+  <script src="scripts/filters/base64Encode.js"></script>
+  <script src="scripts/filters/capitalizeFirstLetter.js"></script>
+  <script src="scripts/filters/formatPhone.js"></script>
+  <script src="scripts/filters/relativeDate.js"></script>
+  <script src="scripts/filters/unsafe.js"></script>
+
   <!-- Services -->
   <script src="scripts/services/user.js"></script>
+  <script src="scripts/services/application.js"></script>
 
   <!-- CSS -->
   <link rel="stylesheet" href="bower_components/foundation/css/normalize.css">
