--- a/index.html
+++ b/index.html
@@ -4,39 +4,39 @@
   <title>Kent Hack Enough</title>
 
   <!-- Config -->
-  <script src="config/config.js"></script>
+  <script src="/config/config.js"></script>
 
   <!-- Vendor -->
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="bower_components/moment/min/moment.min.js"></script>
-  <script src="bower_components/underscore/underscore-min.js"></script>
-  <script src="bower_components/angular/angular.min.js"></script>
-  <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
-  <script src="bower_components/angular-route/angular-route.min.js"></script>
-  <script src="bower_components/modernizr/modernizr.js"></script>
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/moment/min/moment.min.js"></script>
+  <script src="/bower_components/underscore/underscore-min.js"></script>
+  <script src="/bower_components/angular/angular.min.js"></script>
+  <script src="/bower_components/angular-cookies/angular-cookies.min.js"></script>
+  <script src="/bower_components/angular-route/angular-route.min.js"></script>
+  <script src="/bower_components/modernizr/modernizr.js"></script>
 
-  <script src="scripts/app.js"></script>
+  <script src="/scripts/app.js"></script>
 
   <!-- Controllers -->
-  <script src="scripts/controllers/application.js"></script>
-  <script src="scripts/controllers/home.js"></script>
+  <script src="/scripts/controllers/application.js"></script>
+  <script src="/scripts/controllers/home.js"></script>
 
   <!-- Filters -->
-  <script src="scripts/filters/base64Encode.js"></script>
-  <script src="scripts/filters/capitalizeFirstLetter.js"></script>
-  <script src="scripts/filters/formatPhone.js"></script>
-  <script src="scripts/filters/relativeDate.js"></script>
-  <script src="scripts/filters/unsafe.js"></script>
+  <script src="/scripts/filters/base64Encode.js"></script>
+  <script src="/scripts/filters/capitalizeFirstLetter.js"></script>
+  <script src="/scripts/filters/formatPhone.js"></script>
+  <script src="/scripts/filters/relativeDate.js"></script>
+  <script src="/scripts/filters/unsafe.js"></script>
 
   <!-- Services -->
-  <script src="scripts/services/user.js"></script>
-  <script src="scripts/services/application.js"></script>
+  <script src="/scripts/services/user.js"></script>
+  <script src="/scripts/services/application.js"></script>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="bower_components/foundation/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/foundation/css/foundation.css">
-  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="/bower_components/foundation/css/normalize.css">
+  <link rel="stylesheet" href="/bower_components/foundation/css/foundation.css">
+  <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/app.css">
 
   <base href="/">
 </head>
@@ -44,8 +44,8 @@
 
   <div ng-view></div>
 
-  <script src="bower_components/fastclick/lib/fastclick.js"></script>
-  <script src="bower_components/foundation/js/foundation.min.js"></script>
+  <script src="/bower_components/fastclick/lib/fastclick.js"></script>
+  <script src="/bower_components/foundation/js/foundation.min.js"></script>
   <script>
     $(document).foundation();
   </script>
