--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <title>Kent Hack Enough</title>
 
+  <!-- Behavioral Meta Data -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
   <!-- Config -->
   <script src="/config/config.js"></script>
 
@@ -14,6 +18,7 @@
   <script src="/bower_components/angular-cookies/angular-cookies.min.js"></script>
   <script src="/bower_components/angular-route/angular-route.min.js"></script>
   <script src="/bower_components/modernizr/modernizr.js"></script>
+  <script src="/bower_components/parallax/deploy/jquery.parallax.min.js"></script>
 
   <script src="/scripts/app.js"></script>
 
@@ -49,5 +54,6 @@
   <script>
     $(document).foundation();
   </script>
+
 </body>
 </html>
