Add working background yay

--- a/home.html
+++ b/home.html
@@ -3,18 +3,8 @@
   <ul id="scene" class="scene">
     <li class="layer" data-depth="0.70"><img id="layer2" src="img/layer2.png"></li>
     <li class="layer" data-depth="0.40"><img id="layer1" src="img/layer1.png"></li>
-    <li class="layer" data-depth="0.10">
-      <div class="row" id="icons">
-        <div class="small-12 columns align-center">
-          <li><img src="img/clover.svg"></li>
-          <li><img src="img/diamond.svg"></li>
-          <li><img src="img/spade.svg"></li>
-          <li><img src="img/heart.svg"></li>
-        </div>
-      </div>
-    </li>
   </ul>
-
+<!--
   <div class="wrap">
     <div class="row" id="icons">
       <div class="small-12 columns align-center">
@@ -24,7 +14,6 @@
         <li><img src="img/heart.svg"></li>
       </div>
     </div>
-
     <div class="row" id="header">
       <div class="small-12 columns align-center">
         <h1>KENT HACK ENOUGH</h1>
@@ -54,7 +43,7 @@
           </div>
         </form>
       </div>
-    </div>
+    </div> --> -->
 
 </div>
 
