Add icons and logo centered vertically and horizontally

--- a/home.html
+++ b/home.html
@@ -1,51 +1,23 @@
 <!-- Parallax Background -->
 <div id="container" class="container">
   <ul id="scene" class="scene">
-    <li class="layer" data-depth="0.70"><img id="layer2" src="img/layer2.png"></li>
-    <li class="layer" data-depth="0.40"><img id="layer1" src="img/layer1.png"></li>
-  </ul>
-<!--
-  <div class="wrap">
-    <div class="row" id="icons">
-      <div class="small-12 columns align-center">
-        <li><img src="img/clover_white.svg"></li>
-        <li><img src="img/diamond.svg"></li>
-        <li><img src="img/spade_white.svg"></li>
-        <li><img src="img/heart.svg"></li>
-      </div>
-    </div>
-    <div class="row" id="header">
-      <div class="small-12 columns align-center">
-        <h1>KENT HACK ENOUGH</h1>
-      </div>
-    </div>
-
-    <div class="row" id="date">
-      <div class="small-12 columns align-center">
-        <h3>October 9 - 11, 2015 <span class="horizontal-spacer">|</span> <a href="mailto:staff@khe.io">staff@khe.io</a></h3>
-      </div>
-    </div>
-
-    <div class="row">
-      <br><br>
-      <div class="small-4 small-offset-4 columns">
-        <p class="align-center">Get updates about KHE:</p>
-        <p id="thanks" class="align-center">Thanks, you'll be hearing from us soon!</p>
-        <p id="error" class="align-center">That email is already in use.</p>
-        <form>
-          <div class="row collapse">
-            <div class="small-10 columns">
-              <input type="text" placeholder="Email" id="email">
-            </div>
-            <div class="small-2 columns">
-              <button href="#" class="button postfix">Go</button>
-            </div>
+    <li class="layer" data-depth="1.00"><img id="layer2" src="img/layer2.png"></li>
+    <li class="layer" data-depth="0.50"><img id="layer1" src="img/layer1.png"></li>
+    <li class="layer" data-depth="0.10">
+      <div class="content">
+        <div class="row">
+          <div class="small-12 columns align-center">
+            <img id="icons" src="img/icons.svg">
           </div>
-        </form>
+        </div>
+        <div class="row">
+          <div class="small-12 columns align-center">
+            <img src="img/logo.png">
+          </div>
+        </div>
       </div>
-    </div> --> -->
-
-</div>
+    </li>
+  </ul>
 
 <script>
   $('#scene').parallax({
