--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
   <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/app.css">
 
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="img/favicon.ico" />
+
   <base href="/">
 </head>
 <body>
