Make form submit via angular service, add news service

--- a/home.html
+++ b/home.html
@@ -34,12 +34,12 @@
           <br>
           <div class="small-4 small-offset-4 columns">
             <p class="align-center">Get updates about KHE:</p>
-            <p id="thanks" class="align-center">Thanks, you'll be hearing from us soon!</p>
-            <p id="error" class="align-center">That email is already in use.</p>
-            <form>
+            <p ng-if="home.success" class="align-center">Thanks, you'll be hearing from us soon!</p>
+            <p ng-if="home.error" class="align-center">That email is already in use.</p>
+            <form ng-if="!home.success" ng-submit="home.mail()">
               <div class="row collapse">
                 <div class="small-10 columns">
-                  <input type="text" placeholder="Email" id="email">
+                  <input type="text" placeholder="Email" ng-model="home.email">
                 </div>
                 <div class="small-2 columns">
                   <button href="#" class="button postfix">Go</button>
@@ -60,30 +60,3 @@
   });
 </script>
 
-<script>
-  var $form = $('form');
-  var $email = $('#email');
-  var $thanks = $('#thanks');
-  var $error = $('#error');
-  $thanks.hide();
-  $error.hide();
-  $form.submit(function (e) {
-    e.preventDefault();
-    $.post('http://api.khe.io/news', {
-      email: $email.val()
-    }).
-    done(function (data) {
-      $thanks.show();
-      $error.hide();
-      $form.hide();
-    }).
-    fail(function (data) {
-      $thanks.hide();
-      $error.show();
-      $form.show();
-    }).
-    always(function () {
-      $email.val('');
-    });
-  });
-  </script>
