--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
   <!-- Services -->
   <script src="/scripts/services/user.js"></script>
+  <script src="/scripts/services/news.js"></script>
   <script src="/scripts/services/application.js"></script>
 
   <!-- CSS -->
