--- a/home.html
+++ b/home.html
@@ -2,6 +2,8 @@
 <div id="container" class="container">
   <ul id="scene" class="scene">
     <li class="layer" data-depth="1.00"><img id="layer2" src="img/layer2.png"></li>
+    <li class="layer" data-depth="1.00"><img id="layer2" src="img/layer2.png"></li>
+    <li class="layer" data-depth="0.50"><img id="layer1" src="img/layer1.png"></li>
     <li class="layer" data-depth="0.50"><img id="layer1" src="img/layer1.png"></li>
     <li class="layer" data-depth="0.10">
       <div class="content">
