--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 
         <div class="row" id="contact">
           <div class="small-12 columns align-center">
-            <h4> <a target="_blank" href="/SponsorshipPacket.pdf">Insterested in sponsoring?</a> Contact us at: <a href="mailto:staff@khe.io">staff@khe.io</a><h4>
+            <h4> <a target="_blank" href="/SponsorshipPacket.pdf">Interested in sponsoring?</a> Contact us at: <a href="mailto:staff@khe.io">staff@khe.io</a><h4>
           </div>
         </div>
 
