Change font from css import to html link

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <!-- Favicon -->
   <link rel="shortcut icon" href="img/favicon.ico" />
 
+  <!-- Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Oswald' rel='stylesheet' type='text/css'>
+
   <base href="/">
 
 </head>
