--- a/application.html
+++ b/application.html
@@ -1,100 +1,70 @@
-<div ng-controller="ApplicationCtrl as application" class="small-12 columns">
+<div id="application">
+  <div class="row">
+    <div class="small-12 columns">
+      <form ng-submit="application.submit()" novalidate class="validation">
 
-  <requirelogin user="application.me" error="true">
+        <!-- Name -->
+        <div class="row section" id="name">
+          <p>What is your name?</p>
+          <input type="text" ng-model="application.name" placeholder="John Doe" required>
+        </div>
 
-    <div class="row">
-      <div class="small-12 columns">
-        <p><a href="/">Home</a></p>
-      </div>
-    </div>
-
-    <!-- Errors, if there are any -->
-    <div ng-if="application.errors">
-      <div data-alert class="alert-box alert">
-        <span ng-repeat="error in application.errors">{{error}}<br></span>
-        <a href="#" class="close">&times;</a>
-      </div>
-    </div>
-
-    <!-- The application form -->
-    <form ng-submit="application.submit()" novalidate class="validation">
-
-      <!-- Name -->
-      <div class="row">
-        <label class="small-12 large-6 columns">
-          First Name
-          <input type="text" ng-model="application.name.first" placeholder="John" required>
-        </label>
-        <label class="small-12 large-6 columns">
-          Last Name
-          <input type="text" ng-model="application.name.last" placeholder="Doe" required>
-        </label>
-      </div>
-
-      <!-- Phone -->
-      <div class="row">
-        <label class="small-12 columns">
-          Phone Number
+        <!-- Phone -->
+        <div class="row section" id="phone">
+          <p>What is your phone number?</p>
           <input type="text" ng-model="application.phone" placeholder="555-555-5555" required>
-        </label>
-      </div>
+        </div>
 
-      <!-- School -->
-      <div class="row">
-        <label class="small-12 columns">
-          School
+        <!-- School -->
+        <div class="row section" id="school">
+          <p>What school do you go to?</p>
           <input type="text" ng-model="application.school" placeholder="State University" required>
-        </label>
-      </div>
+        </div>
 
-      <!-- Shirt size -->
-      <div class="row">
-        <label class="small-12 columns">
-          Shirt Size
+        <!-- T-shirt size -->
+        <div class="row section" id="shirt">
+          <p>What is your t-shirt size?</p>
           <select ng-model="application.shirt" required>
             <option value="S">Small</option>
             <option value="M" selected>Medium</option>
             <option value="L">Large</option>
             <option value="XL">X-Large</option>
           </select>
-        </label>
-      </div>
+        </div>
 
-      <!-- Dietary restrictions -->
-      <div class="row">
-        <label class="small-12 columns">Select any dietary restrictions you have:</label>
-        <label ng-repeat="restriction in application.diet.possible" class="small-12 columns">
-          <input
-            type="checkbox"
-            name="selectedRestrictions[]"
-            value="{{restriction}}"
-            ng-checked="application.diet.selected.indexOf(restriction) > -1"
-            ng-click="application.diet.toggleSelection(restriction)"
-          > {{restriction}}
-        </label>
-      </div>
+        <!-- Dietary restrictions -->
+        <div class="row section" id="dietary">
+          <p>Select any dietary restrictions you have:</p>
+          <label ng-repeat="restriction in application.diet.possible" class="small-12 columns">
+            <input
+              type="checkbox"
+              name="selectedRestrictions[]"
+              value="{{restriction}}"
+              ng-checked="application.diet.selected.indexOf(restriction) > -1"
+              ng-click="application.diet.toggleSelection(restriction)"
+            > {{restriction}}
+          </label>
+        </div>
 
-      <!-- Age and Gender -->
-      <div class="row">
-        <label class="small-12 large-6 columns">
-          How old are you?
+        <!-- Age -->
+        <div class="row section" id="age">
+          <p>How old are you?</p>
           <input type="text" ng-model="application.age" required>
-        </label>
+        </div>
 
-        <label class="small-12 large-6 columns">
-          Gender:
+        <!-- Gender -->
+        <div class="row section" id="gender">
+          <p>Gender:</p>
           <select ng-model="application.gender" required>
             <option value="male">Male</option>
             <option value="female">Female</option>
             <option value="other">Other</option>
           </select>
-        </label>
-      </div>
+        </div>
 
-      <!-- Year in school -->
-      <div class="row">
-        <label class="small-12 large-6 columns">
-          What is your year in school?
+        <!-- Class -->
+        <div class="row section" id="class">
+          <p>What is your year in school?</p>
           <select ng-model="application.year" required>
             <option value="Senior">Senior</option>
             <option value="Junior">Junior</option>
@@ -102,73 +72,57 @@
             <option value="Freshman">Freshman</option>
             <option value="High School">High School</option>
           </select>
-        </label>
+        </div>
 
-        <!-- First hackathon? -->
-        <label class="small-12 large-6 columns">
-          Is this your first hackathon?
-          <select ng-model="application.first" required>
+        <!-- First hackathon -->
+        <div class="row section" id="first">
+          <p>Is this your first hackathon?</p>
+          <select ng-model="application.first">
             <option value="true">Yes</option>
             <option value="false">No</option>
           </select>
-        </label>
-      </div>
+        </div>
 
-      <!-- Major -->
-      <div class="row">
-        <label class="small-12 columns">
-          What is your major?
+        <!-- Major -->
+        <div class="row section" id="major">
+          <p>What is your major?</p>
           <input type="text" ng-model="application.major" required>
-        </label>
-      </div>
+        </div>
 
-      <!-- Travel reimbursement -->
-      <div class="row">
-        <label class="small-12 columns">
-          Will you require travel reimbursement?
+        <!-- Travel -->
+        <div class="row section" id="travel">
+          <p>Will you require travel reimbursement?</p>
           <select ng-model="application.travel" required>
             <option value="true">Yes</option>
             <option value="false">No</option>
           </select>
-        </label>
-      </div>
+        </div>
 
-      <!-- Demographic release -->
-      <div class="row">
-        <label class="small-12 columns">
-          <input type="checkbox" ng-model="application.demographic" value="true" required>
-          I agree to allow my demographic information to be used anonymously to improve hackathons.
-          <br>
-        </label>
-      </div>
+        <!-- Agreements -->
+        <div class="row section" id="agreements">
+          <label>
+            <input type="checkbox" ng-model="application.demographic" value="true" required>
+            I agree to allow my demographic information to be used anonymously to improve hackathons.
+            <br>
+          </label>
+          <label>
+            <input type="checkbox" ng-model="application.conduct" value="true" required>
+            I agree to the MLH Code of Conduct
+            <br>
+          </label>
+          <label>
+            <input type="checkbox" ng-model="application.waiver" value="true" required>
+            I agree to this event waiver.
+            <br>
+          </label>
+        </div>
 
-      <!-- Code of conduct -->
-      <div class="row">
-        <label class="small-12 columns">
-          <input type="checkbox" ng-model="application.conduct" value="true" required>
-          I agree to the MLH Code of Conduct
-          <br>
-        </label>
-      </div>
-
-      <!-- Event waiver -->
-      <div class="row">
-        <label class="small-12 columns">
-          <input type="checkbox" ng-model="application.waiver" value="true" required>
-          I agree to this event waiver.
-          <br>
-        </label>
-      </div>
-
-      <!-- Submit button -->
-      <div class="row">
-        <div class="small-12 columns">
+        <!-- Submission button -->
+        <div class="row section" id="submit">
           <button>Submit</button>
         </div>
-      </div>
 
-    </form>
-
-  </requirelogin>
-
+      </form>
+    </div>
+  </div>
 </div>
