--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="shortcut icon" href="img/favicon.ico" />
 
   <!-- Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Oswald' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700|Oswald:300,400,700' rel='stylesheet' type='text/css'>
 
   <base href="/">
 
@@ -32,7 +32,8 @@
   <!-- UI Scripts -->
   <script src="/bower_components/foundation/js/foundation.min.js"></script>
   <script>
-    $(document).foundation();
+    $.noConflict();
+    jQuery(document).foundation();
   </script>
 
 </body>
