Make pong animation dynamically set up

--- a/application.html
+++ b/application.html
@@ -3,21 +3,6 @@
     <div class="small-12 columns">
       <form ng-submit="application.submit()" class="validation">
 
-        <div id="play">
-
-          <div id="progress">
-            <div class="step">
-
-
-
-              <svg id="ball-cup"></svg>
-
-
-            </div>
-          </div>
-
-        </div>
-
         <!-- Name -->
         <div class="row section">
           <p>What is your name?</p>
@@ -268,4 +253,7 @@
       </form>
     </div>
   </div>
+
+  <footer>
+  </footer>
 </div>
