--- a/application.html
+++ b/application.html
@@ -26,7 +26,7 @@
           <!-- Navigation buttons -->
           <div class="row advance">
             <div class="small-5 columns">
-              <button type="button" class="button secondary btn-prev">Previous [shift+enter]</button>
+              <button type="button" class="button secondary btn-prev">Back [shift+enter]</button>
             </div>
             <div class="small-5 small-offset-2 columns align-right">
               <button type="button" class="button btn-next">Next [enter]</button>
@@ -42,7 +42,7 @@
           <!-- Navigation buttons -->
           <div class="row advance">
             <div class="small-5 columns">
-              <button type="button" class="button secondary btn-prev">Previous [shift+enter]</button>
+              <button type="button" class="button secondary btn-prev">Back [shift+enter]</button>
             </div>
             <div class="small-5 small-offset-2 columns align-right">
               <button type="button" class="button btn-next">Next [enter]</button>
@@ -63,7 +63,7 @@
           <!-- Navigation buttons -->
           <div class="row advance">
             <div class="small-5 columns">
-              <button type="button" class="button secondary btn-prev">Previous [shift+enter]</button>
+              <button type="button" class="button secondary btn-prev">Back [shift+enter]</button>
             </div>
             <div class="small-5 small-offset-2 columns align-right">
               <button type="button" class="button btn-next">Next [enter]</button>
@@ -81,13 +81,13 @@
               value="{{restriction}}"
               ng-checked="application.diet.selected.indexOf(restriction) > -1"
               ng-click="application.diet.toggleSelection(restriction)"
-            > {{restriction}}
+            > <span>{{restriction}}</span>
           </label>
 
           <!-- Navigation buttons -->
           <div class="row advance">
             <div class="small-5 columns">
-              <button type="button" class="button secondary btn-prev">Previous [shift+enter]</button>
+              <button type="button" class="button secondary btn-prev">Back [shift+enter]</button>
             </div>
             <div class="small-5 small-offset-2 columns align-right">
               <button type="button" class="button btn-next">Next [enter]</button>
@@ -103,7 +103,7 @@
           <!-- Navigation buttons -->
           <div class="row advance">
             <div class="small-5 columns">
-              <button type="button" class="button secondary btn-prev">Previous [shift+enter]</button>
+              <button type="button" class="button secondary btn-prev">Back [shift+enter]</button>
             </div>
             <div class="small-5 small-offset-2 columns align-right">
               <button type="button" class="button btn-next">Next [enter]</button>
@@ -123,7 +123,7 @@
           <!-- Navigation buttons -->
           <div class="row advance">
             <div class="small-5 columns">
-              <button type="button" class="button secondary btn-prev">Previous [shift+enter]</button>
+              <button type="button" class="button secondary btn-prev">Back [shift+enter]</button>
             </div>
             <div class="small-5 small-offset-2 columns align-right">
               <button type="button" class="button btn-next">Next [enter]</button>
@@ -145,7 +145,7 @@
           <!-- Navigation buttons -->
           <div class="row advance">
             <div class="small-5 columns">
-              <button type="button" class="button secondary btn-prev">Previous [shift+enter]</button>
+              <button type="button" class="button secondary btn-prev">Back [shift+enter]</button>
             </div>
             <div class="small-5 small-offset-2 columns align-right">
               <button type="button" class="button btn-next">Next [enter]</button>
@@ -164,7 +164,7 @@
           <!-- Navigation buttons -->
           <div class="row advance">
             <div class="small-5 columns">
-              <button type="button" class="button secondary btn-prev">Previous [shift+enter]</button>
+              <button type="button" class="button secondary btn-prev">Back [shift+enter]</button>
             </div>
             <div class="small-5 small-offset-2 columns align-right">
               <button type="button" class="button btn-next">Next [enter]</button>
@@ -180,7 +180,7 @@
           <!-- Navigation buttons -->
           <div class="row advance">
             <div class="small-5 columns">
-              <button type="button" class="button secondary btn-prev">Previous [shift+enter]</button>
+              <button type="button" class="button secondary btn-prev">Back [shift+enter]</button>
             </div>
             <div class="small-5 small-offset-2 columns align-right">
               <button type="button" class="button btn-next">Next [enter]</button>
@@ -199,7 +199,7 @@
           <!-- Navigation buttons -->
           <div class="row advance">
             <div class="small-5 columns">
-              <button type="button" class="button secondary btn-prev">Previous [shift+enter]</button>
+              <button type="button" class="button secondary btn-prev">Back [shift+enter]</button>
             </div>
             <div class="small-5 small-offset-2 columns align-right">
               <button type="button" class="button btn-next">Next [enter]</button>
@@ -228,7 +228,7 @@
           <!-- Navigation buttons -->
           <div class="row advance">
             <div class="small-5 columns">
-              <button type="button" class="button secondary btn-prev">Previous [shift+enter]</button>
+              <button type="button" class="button secondary btn-prev">Back [shift+enter]</button>
             </div>
             <div class="small-5 small-offset-2 columns align-right">
               <button type="button" class="button btn-next">Next [enter]</button>
@@ -243,7 +243,7 @@
           <!-- Navigation buttons -->
           <div class="row advance">
             <div class="small-5 columns">
-              <button type="button" class="button secondary btn-prev">Previous [shift+enter]</button>
+              <button type="button" class="button secondary btn-prev">Back [shift+enter]</button>
             </div>
             <div class="small-5 small-offset-2 columns align-right">
             </div>
@@ -253,7 +253,4 @@
       </form>
     </div>
   </div>
-
-  <footer>
-  </footer>
 </div>
